# winui3-rs

./: .gitignore  Cargo.toml  LICENSE
bindgen/: Cargo.toml
bindgen/src/: main.rs  winui3.txt  xaml_interop.txt
samples/mica/: Cargo.toml
samples/mica/src/: main.rs
samples/simple-xaml-app/: Cargo.toml
samples/simple-xaml-app/src/: main.rs
winui3/: Cargo.toml
winui3/src/: bootstrap.rs  interop.rs  lib.rs  native.rs  xaml_app.rs  xaml_page.rs  xaml_types.rs
winui3/src/Microsoft/: mod.rs
winui3/src/Microsoft/Graphics/: mod.rs
winui3/src/Microsoft/Graphics/DirectX/: mod.rs
winui3/src/Microsoft/Graphics/Display/: mod.rs
winui3/src/Microsoft/UI/: mod.rs
winui3/src/Microsoft/UI/Composition/: mod.rs
winui3/src/Microsoft/UI/Composition/Core/: mod.rs
winui3/src/Microsoft/UI/Composition/Diagnostics/: mod.rs
winui3/src/Microsoft/UI/Composition/Effects/: mod.rs
winui3/src/Microsoft/UI/Composition/Interactions/: mod.rs
winui3/src/Microsoft/UI/Composition/Scenes/: mod.rs
winui3/src/Microsoft/UI/Composition/SystemBackdrops/: mod.rs
winui3/src/Microsoft/UI/Content/: mod.rs
winui3/src/Microsoft/UI/Dispatching/: mod.rs
winui3/src/Microsoft/UI/Input/: mod.rs
winui3/src/Microsoft/UI/Input/DragDrop/: mod.rs
winui3/src/Microsoft/UI/Input/Interop/: mod.rs
winui3/src/Microsoft/UI/System/: mod.rs
winui3/src/Microsoft/UI/Text/: mod.rs
winui3/src/Microsoft/UI/Windowing/: mod.rs
winui3/src/Microsoft/UI/Xaml/: mod.rs
winui3/src/Microsoft/UI/Xaml/Automation/: mod.rs
winui3/src/Microsoft/UI/Xaml/Automation/Provider/: mod.rs
winui3/src/Microsoft/UI/Xaml/Automation/Text/: mod.rs
winui3/src/Microsoft/UI/Xaml/Controls/: mod.rs
winui3/src/Microsoft/UI/Xaml/Controls/AnimatedVisuals/: mod.rs
winui3/src/Microsoft/UI/Xaml/Data/: mod.rs
winui3/src/Microsoft/UI/Xaml/Documents/: mod.rs
winui3/src/Microsoft/UI/Xaml/Hosting/: mod.rs
winui3/src/Microsoft/UI/Xaml/Input/: mod.rs
winui3/src/Microsoft/UI/Xaml/Interop/: mod.rs
winui3/src/Microsoft/UI/Xaml/Markup/: mod.rs
winui3/src/Microsoft/UI/Xaml/Media/: mod.rs
winui3/src/Microsoft/UI/Xaml/Media/Animation/: mod.rs
winui3/src/Microsoft/UI/Xaml/Media/Imaging/: mod.rs
winui3/src/Microsoft/UI/Xaml/Media/Media3D/: mod.rs
winui3/src/Microsoft/UI/Xaml/Navigation/: mod.rs
winui3/src/Microsoft/UI/Xaml/Printing/: mod.rs
winui3/src/Microsoft/UI/Xaml/Resources/: mod.rs
winui3/src/Microsoft/UI/Xaml/Shapes/: mod.rs
winui3/src/Microsoft/UI/Xaml/XamlTypeInfo/: mod.rs
winui3/src/Microsoft/Web/: mod.rs
winui3/src/Microsoft/Web/WebView2/: mod.rs
winui3/src/Microsoft/Web/WebView2/Core/: mod.rs
winui3/src/Microsoft/Windows/: mod.rs
winui3/src/Microsoft/Windows/ApplicationModel/: mod.rs
winui3/src/Microsoft/Windows/ApplicationModel/Resources/: mod.rs
winui3/src/Windows/: mod.rs
winui3/src/Windows/UI/: mod.rs
winui3/src/Windows/UI/Xaml/: mod.rs
winui3/src/Windows/UI/Xaml/Interop/: mod.rs
winui3/src/bindings/: Interop.rs
