[workspace]
resolver = "2"
members = [
    "bindgen",
    "samples/*",
    "winui3",
]
default-members = [
    "winui3",
]

[workspace.dependencies]
windows = "0.61.3"
windows-bindgen = "0.62.1"
windows-collections = "0.2.0"
windows-core = "0.61.2"
windows-future = "0.2.1"
windows-numerics = "0.2.0"
winui3 = { path = "winui3" }
