[package]
name = "winui3"
version = "0.106.0"
edition = "2021"

[dependencies]
windows-collections.workspace = true
windows-core.workspace = true
windows-future.workspace = true
windows-numerics.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Security",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_WinRT",
]

[features]
default = []
deprecated = []
Foundation = ["windows/Foundation"]
XamlApp = [
    "UI_Xaml",
    "UI_Xaml_Controls",
    "UI_Xaml_Interop",
    "UI_Xaml_Markup",
    "UI_Xaml_XamlTypeInfo",
]
XamlNavigation = [
    "UI_Composition",
    "UI_Dispatching",
    "UI_Input",
    "UI_Xaml",
    "UI_Xaml_Controls",
    "UI_Xaml_Controls_Primitives",
    "UI_Xaml_Data",
    "UI_Xaml_Input",
    "UI_Xaml_Interop",
    "UI_Xaml_Markup",
    "UI_Xaml_Media",
    "UI_Xaml_Media_Animation",
    "UI_Xaml_Media_Media3D",
    "UI_Xaml_Navigation",
    "UI_Xaml_XamlTypeInfo",
]
# generated features
Graphics = ["Foundation"]
Graphics_DirectX = ["Graphics"]
Graphics_Display = ["Graphics", "windows/Storage_Streams"]
UI = ["Foundation", "windows/UI"]
UI_Composition = [
    "UI",
    "windows/Foundation_Numerics",
    "windows/Graphics_Effects",
    "windows/UI_Composition",
]
UI_Composition_Core = ["UI_Composition"]
UI_Composition_Diagnostics = ["UI_Composition"]
UI_Composition_Effects = ["UI_Composition"]
UI_Composition_Interactions = ["UI_Composition"]
UI_Composition_Scenes = ["UI_Composition"]
UI_Composition_SystemBackdrops = ["UI_Composition", "windows/UI_Core"]
UI_Content = ["UI", "windows/Graphics"]
UI_Dispatching = ["UI"]
UI_Input = ["UI", "windows/Graphics", "windows/System", "windows/UI_Core"]
UI_Input_DragDrop = [
    "UI_Input",
    "windows/ApplicationModel_DataTransfer",
    "windows/Graphics_Imaging",
]
UI_Input_Interop = ["UI_Input"]
UI_System = ["UI"]
UI_Text = ["UI", "windows/Storage_Streams", "windows/UI_Text"]
UI_Windowing = ["deprecated", "UI", "windows/Graphics"]
UI_Xaml = [
    "UI",
    "UI_Xaml_Interop",
    "windows/ApplicationModel_Activation",
    "windows/ApplicationModel_Core",
    "windows/ApplicationModel_DataTransfer_DragDrop",
    "windows/Foundation_Collections",
    "windows/Graphics_Imaging",
    "windows/UI_Core",
]
UI_Xaml_Automation = ["UI_Xaml"]
UI_Xaml_Automation_Peers = ["deprecated", "UI_Xaml_Automation"]
UI_Xaml_Automation_Provider = ["UI_Xaml_Automation"]
UI_Xaml_Automation_Text = ["UI_Xaml_Automation"]
UI_Xaml_Controls = [
    "deprecated",
    "UI_Text",
    "UI_Xaml",
    "windows/ApplicationModel_Contacts",
    "windows/Devices_Geolocation",
    "windows/Globalization_NumberFormatting",
    "windows/Media_Casting",
    "windows/Media_Playback",
]
UI_Xaml_Controls_AnimatedVisuals = ["UI_Xaml_Controls"]
UI_Xaml_Controls_Primitives = ["UI_Xaml_Controls"]
UI_Xaml_Data = ["UI_Xaml"]
UI_Xaml_Documents = ["UI_Text", "UI_Xaml"]
UI_Xaml_Hosting = ["UI_Xaml"]
UI_Xaml_Input = ["UI_Input", "UI_Xaml"]
UI_Xaml_Interop = []
UI_Xaml_Markup = ["UI_Xaml", "windows/Storage_Streams"]
UI_Xaml_Media = ["UI_Xaml", "windows/Storage_Streams"]
UI_Xaml_Media_Animation = ["UI_Xaml_Media"]
UI_Xaml_Media_Imaging = ["UI_Xaml_Media", "windows/ApplicationModel_Background"]
UI_Xaml_Media_Media3D = ["UI_Xaml_Media"]
UI_Xaml_Navigation = ["UI_Xaml"]
UI_Xaml_Printing = ["UI_Xaml", "windows/Graphics_Printing"]
UI_Xaml_Resources = ["UI_Xaml"]
UI_Xaml_Shapes = ["UI_Xaml"]
UI_Xaml_XamlTypeInfo = ["UI_Xaml"]
Windows = ["Foundation"]
Windows_ApplicationModel = ["Windows"]
Windows_ApplicationModel_Resources = ["Windows_ApplicationModel"]
